--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,11 +44,11 @@ body{
     background: var(--bg-clr);
     box-sizing: border-box;
     width: 100vw;
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 h1{
     color: var(--text-clr);
